<resources>
    <string name="app_name">AndWallet</string>
    <string name="please_enter_pin">Please enter PIN!</string>
    <string name="enter">Enter</string>
    <string name="pin">PIN</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="delete_item">Delete item</string>
    <string name="edit_item">Edit item</string>
    <string name="remove_all">Remove All</string>
    <string name="are_you_sure_want_to_remove_all_items">Are You sure want to remove all items?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="view_savings">View Savings</string>
    <string name="monthly_summary">Monthly Summary</string>
    <string name="price">Price</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="balance_amount">Balance: %1$d</string>
    <string name="balance_placeholder">Balance</string>
    <string name="name_placeholder">Name</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="new_transaction">New Transaction</string>
    <string name="add_amount">Add Amount</string>
    <string name="subtract_amount">Subtract Amount</string>
    <string name="oops_try_again">Oops! Try again!</string>
    <string name="new_item_to_save_for">New Item to Save for</string>
    <string name="please_set_your_pin">Please set your PIN</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="summary_of_incomes_and_expenses">Summary of incomes and expenses</string>
    <string name="wrong_pin">Wrong PIN!</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="see_exchange_rates">See exchange rates</string>
    <string name="network_request_error">Network request error occurred, check LOG</string>
    <string name="number_ft">%1$d Ft</string>
    <string name="number_decimal_ft">%1$.2f Ft</string>
</resources>