<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dip">

    <TextView
        android:id="@+id/pinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pinEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinText" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/show"
        android:textOn="@string/hide"
        app:layout_constraintBottom_toBottomOf="@+id/pinEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pinEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>